Updated Traefik 2 Config page

--- a/config.toml
+++ b/config.toml
@@ -67,8 +67,12 @@ pygmentscodefencesguesssyntax = true
   weight = 1
   url  = "posts/"
 [[menu.main]]
-  name = "About"
+  name = "Traefik 2 Config"
   weight = 2
+  url = "traefik2/"
+[[menu.main]]
+  name = "About"
+  weight = 3
   url = "about/"
 #[[menu.main]]
 #  name = "Resume"
